@@ -2,7 +2,7 @@
 	sys_unix.c
 	Unix system interface code
 
-	$Header: /home/ozzie/Download/0000/uhexen2/hexen2/sys_unix.c,v 1.114 2010-01-27 16:40:11 sezero Exp $
+	$Header: /home/ozzie/Download/0000/uhexen2/hexen2/sys_unix.c,v 1.115 2010-10-04 07:33:30 sezero Exp $
 */
 
 #include "quakedef.h"
@@ -153,8 +153,6 @@ static char		*findpath, *findpattern;
 
 char *Sys_FindFirstFile (const char *path, const char *pattern)
 {
-	size_t	tmp_len;
-
 	if (finddir)
 		Sys_Error ("Sys_FindFirst without FindClose");
 
@@ -162,12 +160,8 @@ char *Sys_FindFirstFile (const char *path, const char *pattern)
 	if (!finddir)
 		return NULL;
 
-	tmp_len = strlen (pattern);
-	findpattern = (char *) Z_Malloc (tmp_len + 1, Z_MAINZONE);
-	strcpy (findpattern, pattern);
-	tmp_len = strlen (path);
-	findpath = (char *) Z_Malloc (tmp_len + 1, Z_MAINZONE);
-	strcpy (findpath, path);
+	findpattern = Z_Strdup (pattern);
+	findpath = Z_Strdup (path);
 
 	return Sys_FindNextFile();
 }
