@@ -3,6 +3,9 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2010-10-04 (CVS):
+    * replace several occasions of Z_Malloc() + strcpy() by Z_Strdup().
+
 2010-08-31 (CVS):
     * hexen2, hewenworld, utils: add printf format attribute to q_vsnprintf()
     * hexen2/host_cmd.c (Host_Say_f, Host_Tell_f): Remove trailing quote
